        * include/Rcpp/sugar/Range.h: correct operators ++ and --
        * include/Rcpp/sugar/tools/iterator.h: correct operators ++ and --
        * include/Rcpp/vector/MatrixBase.h : correct operators ++ and --
        * include/Rcpp/vector/VectorBase.h : correct operators ++ and --
        * unitTests/cpp/Vector.cpp: new unit tests 
        * unitTests/runit.Vector.R: new unit tests
        * src/api.cpp: comment dropTrailing0 which is not used anymore 

2013-01-15  Dirk Eddelbuettel  <edd@debian.org>

	* src/api.cpp (Rcpp): Commented-out coerce_to_string() for real and
	complex arguments as R-devel (as of today) dislikes use of non-API
	functions Rf_EncodeComplex’, ‘Rf_EncodeReal’, ‘Rf_formatComplex’ 

	* .Rbuildignore: Added inst/include/Rcpp/preprocessor and
	sugar/functions/impl which are currently empty directories

	* src/Timer.cpp (Rcpp): Avoid a 'long long' warning from a const

2014-01-15  JJ Allaire <jj@rstudio.org>

        * R/Attributes.R: don't add source directory as an include path for
        sourceCpp; fix duplicate inclusion of Rcpp directory
        * R/RcppLdpath.R: don't quote paths on windows

2014-01-14  JJ Allaire <jj@rstudio.org>

        * DESCRIPTION: bump version to 0.10.2.3
        * R/Attributes.R: handle build paths with spaces on windows
        * R/RcppLdpath.R: handle build paths with spaces on windows
        * R/tools.R: handle build paths with spaces on windows
        * src/Timer.cpp: fix OSX build (remove __MACH__ define check)
        * R/: set svn eol-style native for source files
        * src/: set svn eol-style native for source files 
        * inst/include/: set svn eol-style native for source files 

2014-01-13  JJ Allaire <jj@rstudio.org>

        * R/Attributes.R: use plugin includes in cppFunction; stop with 
        explicit error on Windows then the Rcpl libPath or sourceCpp
        target file contains spaces in it's path; add source file directory