@@ -3,7 +3,8 @@
 //
 // r_type_traits.h: Rcpp R/C++ interface class library -- traits to help wrap
 //
-// Copyright (C) 2010 - 2012 Dirk Eddelbuettel and Romain Francois
+// Copyright (C) 2010 - 2013 Dirk Eddelbuettel and Romain Francois
+// Copyright (C) 2013 Rice University
 //
 // This file is part of Rcpp.
 //
@@ -37,6 +38,12 @@ struct r_type_primitive_tag{} ;
  * to std::string
  */
 struct r_type_string_tag{} ;
+
+/**
+ * Identifies that the associated type can be implicitely converted
+ * to a std::wstring
+ */
+struct r_type_wstring_tag{} ;
 
 /**
  * Default
@@ -110,11 +117,14 @@ template<> struct r_type_traits<Rbyte>{ typedef r_type_primitive_tag r_category 
 template<> struct r_type_traits<Rcomplex>{ typedef r_type_primitive_tag r_category ; } ;
 template<> struct r_type_traits<bool>{ typedef r_type_primitive_tag r_category ; } ;
 template<> struct r_type_traits<std::string>{ typedef r_type_string_tag r_category ; } ;
+template<> struct r_type_traits<std::wstring>{ typedef r_type_wstring_tag r_category ; } ;
 template<> struct r_type_traits<char>{ typedef r_type_string_tag r_category ; } ;
+template<> struct r_type_traits<wchar_t>{ typedef r_type_wstring_tag r_category ; } ;
 
 template<> struct r_type_traits<unsigned int>{ typedef r_type_primitive_tag r_category ; } ;
 template<> struct r_type_traits<float>{ typedef r_type_primitive_tag r_category ; } ;
 template<> struct r_type_traits<const char*>{ typedef r_type_string_tag r_category ; } ;
+template<> struct r_type_traits<const wchar_t*>{ typedef r_type_wstring_tag r_category ; } ;
 
 /* long */
 template<> struct r_type_traits<long>{ typedef r_type_primitive_tag r_category ; } ;
